# RustCFML

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TAFFY_NEXT_STEPS.md  TESTING.md  Work.md  server.json  test_all.cfm
.github/workflows/: deploy-demo.yml  release.yml
crates/cfml-codegen/: Cargo.toml
crates/cfml-codegen/src/: bytecode.rs  compiler.rs  lib.rs
crates/cfml-common/: Cargo.toml
crates/cfml-common/src/: dynamic.rs  encodings.rs  introspection.rs  lib.rs  position.rs  vfs.rs  vm.rs
crates/cfml-compiler/: Cargo.toml
crates/cfml-compiler/src/: ast.rs  lexer.rs  lib.rs  parser.rs  tag_parser.rs  token.rs
crates/cfml-stdlib/: Cargo.toml
crates/cfml-stdlib/src/: builtins.rs  lib.rs
crates/cfml-vm/: Cargo.toml
crates/cfml-vm/src/: java_shims.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  rewrite.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/: 01_hello.cfm  02_variables.cfm  03_conditionals.cfm  04_arrays.cfm  05_ternary.cfm  06_expressions.cfm  07_booleans.cfm  08_builtins.cfm  mem_stress.cfm  shebang_test.cfm  shebang_test.sh
examples/interactivejs/: index.html
examples/miniapp/: about.cfm  footer.cfm  header.cfm  index.cfm
examples/taffytest/: index.cfm  taffy  urlrewrite.xml
examples/taffytest/api/: Application.cfc  diag.cfm  index.cfm  test.cfm  urlrewrite.xml
examples/taffytest/api/resources/: HelloResource.cfc  UsersCollection.cfc
examples/taffytest/resources/: HelloResource.cfc  UsersCollection.cfc
tests/: Application.cfc  harness.cfm  runner.cfm  server-tests.json  simple_test.cfm  taffy_index.cfm
tests/comments/: test_hash_in_comments.cfm
tests/compat_engine/: test_array_functions.cfm  test_collection_functions.cfm  test_date_functions.cfm  test_edge_cases.cfm  test_encoding_functions.cfm  test_file_functions.cfm  test_json.cfm  test_language_closures.cfm  test_language_controlflow.cfm  test_language_operators.cfm  test_list_functions.cfm  test_math_functions.cfm  test_query_functions.cfm  test_scope_behavior.cfm  test_string_functions.cfm  test_struct_functions.cfm  test_type_casting.cfm  test_type_checking.cfm
tests/core/: NoAccessorComponent.cfc  SequentialMethodCFC.cfc  TestComponent.cfc  test_access_identifiers.cfm  test_arguments_writeback.cfm  test_arrow_functions.cfm  test_colon_syntax.cfm  test_component_accessors.cfm  test_component_accessors_debug.cfm  test_component_accessors_debug2.cfm  test_component_accessors_debug3.cfm  test_component_accessors_debug4.cfm  test_component_accessors_debug5.cfm  test_control_flow.cfm  test_error_context.cfm  test_error_handling.cfm  test_function_scope_capture.cfm  test_functions.cfm  test_include_scope_capture.cfm  test_language_features.cfm  test_null_coalescing.cfm  test_operators.cfm  test_scopes.cfm  test_struct_method_sequential.cfm  test_variables.cfm
tests/functions/: test_function_references.cfm
tests/includes/: helper_named_args.cfm  helper_variables_scope.cfm  test_named_args_includes.cfm  test_variables_scope_includes.cfm
tests/java_shims/: debug_test.cfm  test_all.cfm  test_comprehensive.cfm  test_concurrent_map.cfm  test_file.cfm  test_minimal.cfm  test_more.cfm  test_security.cfm  test_simple.cfm  test_stringbuilder.cfm  test_system.cfm
tests/members/: test_array_members.cfm  test_number_members.cfm  test_string_members.cfm  test_struct_members.cfm
tests/oop/: Animal.cfc  Cat.cfc  Circle.cfc  Dog.cfc  ExternalPropCFC.cfc  Greeter.cfc  IShape.cfc  InheritedHelpersChild.cfc  InheritedHelpersParent.cfc  InjectableService.cfc  MissingMethodHandler.cfc  StructMethodCFC.cfc  TagPropertyComponent.cfc  test_components.cfm  test_external_prop.cfm  test_inheritance.cfm  test_inherited_helpers.cfm  test_interfaces.cfm  test_loop_createobject.cfm  test_loop_createobject_standalone.cfm  test_metadata.cfm  test_property_attributes.cfm  test_struct_method_dispatch.cfm
tests/stdlib/: test_array_functions.cfm  test_array_higher_order.cfm  test_bitmask_functions.cfm  test_cache_functions.cfm  test_callstack.cfm  test_cfhttp.cfm  test_conversion.cfm  test_date_functions.cfm  test_date_functions_extra.cfm  test_directorylist.cfm  test_encoding_functions.cfm  test_file_io.cfm  test_higher_order_functions.cfm  test_htmlparse.cfm  test_ini_functions.cfm  test_json.cfm  test_list_functions.cfm  test_list_higher_order.cfm  test_listreduceright.cfm  test_locale_functions.cfm  test_math_functions.cfm  test_misc_functions.cfm  test_password_hashing.cfm  test_precisionevaluate.cfm  test_query_functions.cfm  test_query_higher_order.cfm  test_query_mutations.cfm  test_security.cfm  test_string_functions.cfm  test_string_functions_encoding.cfm  test_string_functions_regex.cfm  test_struct_functions.cfm  test_struct_higher_order.cfm  test_type_checking.cfm  test_utility.cfm  test_valuelist_functions.cfm  test_xml.cfm  test_xml_dom_functions.cfm
tests/tags/: _include_target.cfm  http_statements_target.cfm  literal_styles.css  setter.cfm  test_cfinclude_css.cfm  test_tags_basic.cfm  test_tags_cfcache.cfm  test_tags_cfexecute.cfm  test_tags_cffunction_hoisting.cfm  test_tags_cfimport.cfm  test_tags_cfmail.cfm  test_tags_cfscript_statements.cfm  test_tags_cfstoredproc.cfm  test_tags_cfthread.cfm  test_tags_cfzip.cfm  test_tags_control.cfm  test_tags_customtag.cfm  test_tags_include.cfm  test_tags_misc.cfm  test_tags_param.cfm  test_tags_param_dynamic.cfm  test_tags_savecontent.cfm  test_tags_tld.cfm  test_tags_whitespace.cfm  wrapper.cfm
tests/tags/customtags/: greeting.cfm
tests/tags/mytaglib/: greet.cfm  shout.cfm
tests/tags/tldlib/: mylib.tld  upper.cfm
tests/types/: test_array.cfm  test_binary.cfm  test_boolean.cfm  test_hash_in_strings.cfm  test_nested_writeback.cfm  test_null.cfm  test_numeric.cfm  test_query.cfm  test_string.cfm  test_struct.cfm
