[package]
name = "cfml-stdlib"
description = "CFML standard library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["http", "database", "xml", "security", "smtp", "html", "zip_support"]
security = ["rand", "bcrypt", "scrypt", "argon2", "pbkdf2"]
smtp = ["lettre"]
http = ["ureq"]
database = ["sqlite"]
sqlite = ["rusqlite"]
mysql_db = ["dep:mysql"]
postgres_db = ["dep:postgres"]
mssql_db = ["dep:tiberius", "dep:tokio", "dep:tokio-util"]
all-databases = ["sqlite", "mysql_db", "postgres_db", "mssql_db"]
xml = ["quick-xml"]
html = ["scraper", "ego-tree"]
zip_support = ["dep:zip"]

[dependencies]
cfml-common = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = "0.4"
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
serde_json = "1"
sha1 = "0.10"
ureq = { version = "2", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
mysql = { version = "25", optional = true }
postgres = { version = "0.19", optional = true }
tiberius = { version = "0.12", default-features = false, features = ["rustls"], optional = true }
tokio = { version = "1", features = ["rt", "net"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
r2d2 = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
des = "0.8"
blowfish = "0.9"
hmac = "0.12"
rand = { version = "0.8", optional = true }
bcrypt = { version = "0.15", optional = true }
scrypt = { version = "0.11", optional = true }
argon2 = { version = "0.5", optional = true }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
iana-time-zone = "0.1"
quick-xml = { version = "0.36", optional = true }
scraper = { version = "0.22", optional = true }
ego-tree = { version = "0.10", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"], optional = true }
